--- a/Javascript/dom/index.html
+++ b/Javascript/dom/index.html
@@ -6,6 +6,21 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="index.js"></script>
+    <h1>Document object model</h1>
+    <a href="">Google</a>
+    <a href="">facebook</a>
+    <a href="">snapchat</a>
+    <a href="">twitter</a>
+    <a href="">instagram</a>
+    <img src="" alt="" />
+    <img src="" alt="" />
+    <form action=""><label for="">username</label></form>
+    <form action=""><label for="">password</label></form>
+    <ul id="List">
+      <li>list-2</li>
+      <li>list-3</li>
+    </ul>
+    <!-- <script src="index.js"></script> -->
+    <script src="domethods.js"></script>
   </body>
 </html>
