--- a/Javascript/dom/index.html
+++ b/Javascript/dom/index.html
@@ -3,24 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>DOM Example</title>
   </head>
   <body>
-    <h1>Document object model</h1>
-    <a href="">Google</a>
-    <a href="">facebook</a>
-    <a href="">snapchat</a>
-    <a href="">twitter</a>
-    <a href="">instagram</a>
-    <img src="" alt="" />
-    <img src="" alt="" />
-    <form action=""><label for="">username</label></form>
-    <form action=""><label for="">password</label></form>
-    <ul id="List">
-      <li>list-2</li>
-      <li>list-3</li>
-    </ul>
-    <!-- <script src="index.js"></script> -->
-    <script src="domethods.js"></script>
+    <h1 id="mainHeading">Welcome to DOM in JavaScript</h1>
+    <hr />
+
+    <p class="paras">This is paragraph 1</p>
+    <hr />
+    <p class="paras">This is paragraph 2</p>
+    <hr />
+    <p class="paras">This is paragraph 3</p>
+    <hr />
+
+    <a href="#">Link 1</a>
+    <a href="#">Link 2</a>
+
+    <hr />
+    <form>
+      <input type="text" placeholder="Enter your name" />
+      <button type="submit">Submit</button>
+    </form>
+
+    <script src="index.js"></script>
   </body>
 </html>
