--- a/Javascript/FetchApi/index.html
+++ b/Javascript/FetchApi/index.html
@@ -4,8 +4,75 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      * {
+        padding: 0px;
+        margin: 0px;
+        box-sizing: border-box;
+        font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+          "Lucida Sans", Arial, sans-serif;
+      }
+      h1 {
+        text-align: center;
+        margin: 20px;
+      }
+      #container {
+        width: 100vw;
+        /* height: 100vh; */
+        border: 2px solid red;
+        display: flex;
+        flex-wrap: wrap;
+        padding: 30px;
+        justify-content: space-evenly;
+      }
+      .user-container {
+        width: 25%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
+          rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+        border-radius: 10px;
+        transition: all 0.1s linear;
+        padding: 20px;
+      }
+      .user-container:hover {
+        transform: scale(1.1);
+      }
+
+      img {
+        width: 100px;
+        border-radius: 50%;
+      }
+      p {
+        font-size: 20px;
+      }
+      strong {
+        font-size: 25px;
+        padding: 10px;
+      }
+      .user-email {
+        padding: 5px;
+      }
+      button {
+        padding: 10px 20px;
+        font-size: 20px;
+        margin: 10px;
+        border: none;
+        background-color: black;
+        color: white;
+        border-radius: 10px;
+        cursor: pointer;
+      }
+      button:hover {
+        background-color: crimson;
+        color: white;
+      }
+    </style>
   </head>
   <body>
-    <script src="index.js"></script>
+    <h1>Fetch API in JS</h1>
+    <div id="container"></div>
+    <script src="./index.js"></script>
   </body>
 </html>
