--- a/web design/github users with search functnalities/index.html
+++ b/web design/github users with search functnalities/index.html
@@ -11,9 +11,9 @@
     <nav class="navbar">
       <div class="logo">
         <img
-          src="https://cdn-1.webcatalog.io/catalog/amazon/amazon-icon.png?v=1760921580755"
+          src="https://cdn.freebiesupply.com/logos/large/2x/amazon-dark-logo-black-and-white.png"
           alt="logo"
-          width="60"
+          width="70"
         />
       </div>
 
@@ -25,8 +25,9 @@
       </ul>
 
       <div class="search-box">
-        <input type="text" id="username" placeholder="Search Product Name..." />
+        <input type="text" id="search" placeholder="Search Product Name..." />
         <button>Search</button>
+        <button id="green">My Items</button>
       </div>
     </nav>
 
